--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,30 @@
 *.exe
 *.out
 *.app
+
+# Others
+*.tlog
+*.log
+*.ilk
+*.pdb
+*.cache
+*.sdf
+*.opensdf
+*.deps
+*.idb
+*.ico
+*.rc
+*.asm
+*.ipch
+*.metagen
+*.res
+*.txt
+*.ipdb
+*.iobj
+*.force
+*.manifest
+*.model
+*.caffemodel
+*.db
+*.opendb
+*.suo
